<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pullToRefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#E5F6C8"
            android:id="@+id/homelayout"
            >


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none"

                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#E5F6C8"
                            >

                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/image1"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                app:civ_border_color="#000000"
                                app:civ_border_width="3dp"
                                app:civ_shadow="true" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvSchoolName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="@string/school_name"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="25sp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/textView2Id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:text="@string/registration"

                            android:textColor="#000"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/eiinno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="EIIN No"
                            android:textColor="#000"
                            android:textSize="15sp"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"

                            android:gravity="center"
                            android:text="@string/today_date"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tvtoday_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/today_date"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    //class 1
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="20dp"
                            android:layout_centerInParent="true"
                            app:cardBackgroundColor="#FEFFFD"
                            app:cardCornerRadius="5dp"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:weightSum="2"
                                >

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"

                                    android:layout_weight="1"

                                    >

                                    <TextView
                                        android:id="@+id/textView3Id"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:padding="10dp"
                                        android:gravity="center"
                                        android:text="@string/class_1"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                        android:textStyle="bold">

                                    </TextView>
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_weight="1"
                                    >
                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal"
                                        >
                                        <TextView

                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"

                                            android:text="@string/total_boys_number"
                                            android:textSize="16sp">

                                        </TextView>
                                        <TextView
                                            android:id="@+id/textView6_Id"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"

                                            android:textSize="16sp">

                                        </TextView>

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"

                                        android:orientation="horizontal">
                                        <TextView

                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"

                                            android:layout_marginTop="5dp"
                                            android:text="@string/total_girls_number"
                                            android:textSize="16sp">

                                        </TextView>
                                        <TextView
                                            android:id="@+id/textView7Id"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"

                                            android:layout_marginTop="5dp"

                                            android:textSize="16sp"/>

                                    </LinearLayout>


                                </LinearLayout>


                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.cardview.widget.CardView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            app:cardBackgroundColor="#B8ECBC"
                            android:layout_centerInParent="true"
                            app:cardCornerRadius="5dp">

                            <LinearLayout

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:orientation="vertical"
                                >

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:weightSum="4">

                                    <TextView
                                        android:id="@+id/textView8Id"
                                        android:layout_width="0dp"
                                        android:layout_weight="1.5"
                                        android:layout_margin="5dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"

                                        android:text="@string/present_student"
                                        android:textStyle="bold"/>

                                    <com.goodiebag.pinview.Pinview
                                        android:id="@+id/pvBoys1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"



                                        app:hint="123"
                                        android:layout_weight="2.5"

                                        app:forceKeyboard="false"

                                        android:layout_gravity="center"

                                        app:inputType="number"


                                        app:pinLength="3"

                                        app:cursorVisible="true"
                                        />


                                </LinearLayout>






                            </LinearLayout>


                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>



                    <Button
                        android:id="@+id/details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="#009688"
                        android:padding="15dp"

                        android:text="@string/submit"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        tools:ignore="HardcodedText">

                    </Button>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>

    </FrameLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>